app/assets/stylesheets/ratings.scss
// Place all the styles related to the ratings controller here.
// They will automatically be included in application.css.
// You can use Sass (SCSS) here: https://sass-lang.com/

.grade {
  font-weight: bold;

  &.A {
    color: #3498DB;
  }
  &.B {
    color: #27AE60;
  }
  &.C {
    color: #F1C40F;
  }
  &.D {
    color: #E59866;
  }
  &.F {
    color: #D35400;
  }
}

.grade {
  &-A .circle {
    color: darken(#3498DB, 10);
    background-color: lighten(#3498DB, 25);
  }
  &-B .circle {
    color: darken(#27AE60, 10);
    background-color: lighten(#27AE60, 25);
  }
  &-C .circle {
    color: darken(#F1C40F, 10);
    background-color: lighten(#F1C40F, 25);
  }
  &-D .circle {
    color: darken(#E59866, 10);
    background-color: lighten(#E59866, 25);
  }
  &-F .circle {
    color: darken(#D35400, 10);
    background-color: lighten(#D35400, 25);
  }
   .circle {
    color: darken(#AAA, 10);
    background-color: lighten(#AAA, 25);
  }
}

.fa-angry {
  font-size: 1.4rem;
  color: red;
}

.fa-frown {
  font-size: 1.4rem;
  color: orange;
}
.fa-meh {
  font-size: 1.4rem;
  color: yellow;
  text-shadow: 2px 2px blak;
}
.fa-smile {
  font-size: 1.4rem;
  color: green;
}

.field .rating {
    display: flex;
    justify-content: space-between;
    align-content: left;
    width: 275px;

    input[type="radio"] {
      display:none;
    }

    label {
      border: 1px solid #DDD;
      border-radius:5px;
      padding:10px;
      margin-top:10px;
      display:block;
      background-color: #DDD;
    }

    label:hover {
      cursor:pointer;
      background-color:#EEE;
    }

    input[type="radio"]:checked + label {
      background-color:#66A;
    }
}

#ratings.index table td i {
  font-size: 2rem;
}

